--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Swiper -->
 <h1>Meet FOGO</h1>
 <div class="page-content">
-
+Play some games to learn about Fogo 🔥
     <div class="tabbed">
         <input type="radio" id="tab1" name="css-tabs" checked>
         <input type="radio" id="tab2" name="css-tabs">
