--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ Play some games to learn about Fogo 🔥
         <input type="radio" id="tab3" name="css-tabs">
 
         <ul class="tabs">
-            <li class="tab"><label for="tab1">Fill the blank</label></li>
+            <li class="tab"><label for="tab1">Cross words</label></li>
             <li class="tab"><label for="tab2">Associate</label></li>
             <li class="tab"><label for="tab3">Quizz</label></li>
         </ul>
 
         <div class="tab-content">
-            <iframe src='https://puzzel.org/fr/fill-in-the-gap/embed?p=-OORXXKeQuqA3mLARH0u' width='100%' height='800' frameborder='0'></iframe>
+           <iframe src='https://puzzel.org/en/crossword/embed?p=-OPAY0Ptctyne3QIXtdG' width='100%' height='800' frameborder='0'></iframe>
 
         </div>
 
