--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@ Play some games to learn about Fogo 🔥
         <input type="radio" id="tab1" name="css-tabs" checked>
         <input type="radio" id="tab2" name="css-tabs">
         <input type="radio" id="tab3" name="css-tabs">
+        <input type="radio" id="tab4" name="css-tabs">
 
         <ul class="tabs">
             <li class="tab"><label for="tab1">Cross words</label></li>
             <li class="tab"><label for="tab2">Associate</label></li>
             <li class="tab"><label for="tab3">Quizz</label></li>
+            <li class="tab"><label for="tab4">Find the word</label></li>
         </ul>
 
         <div class="tab-content">
            <iframe src='https://puzzel.org/en/crossword/embed?p=-OPAY0Ptctyne3QIXtdG' width='100%' height='800' frameborder='0'></iframe>
 
         </div>
-
+        <div class="tab-content">
+            <iframe src='https://puzzel.org/en/wordseeker/embed?p=-OPAaCZSy9hcavPRNY0j' width='100%' height='800' frameborder='0'></iframe>
+        </div>
         <div class="tab-content">
             <iframe src='https://puzzel.org/fr/matching-pairs/embed?p=-OORZWNH4AVxvaAM8vXL' width='100%' height='800' frameborder='0'></iframe>
         </div>
