--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- Swiper -->
-<h1>Meet FOGO</h1>
+<h1>Meet FOGO game room</h1>
 <div class="page-content">
 Play some games to learn about Fogo 🔥
     <div class="tabbed">
@@ -20,9 +20,9 @@ Play some games to learn about Fogo 🔥
 
         <ul class="tabs">
             <li class="tab"><label for="tab1">Cross words</label></li>
-            <li class="tab"><label for="tab2">Associate</label></li>
-            <li class="tab"><label for="tab3">Quizz</label></li>
-            <li class="tab"><label for="tab4">Find the word</label></li>
+            <li class="tab"><label for="tab2">Find the word</label></li>
+            <li class="tab"><label for="tab3">Puzzle</label></li>
+            <li class="tab"><label for="tab4">Coming soon...</label></li>
         </ul>
 
         <div class="tab-content">
