--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Play some games to learn about Fogo 🔥
             <li class="tab"><label for="tab1">Cross words</label></li>
             <li class="tab"><label for="tab2">Find the word</label></li>
             <li class="tab"><label for="tab3">Puzzle</label></li>
-            <li class="tab"><label for="tab4">Coming soon...</label></li>
+            <li class="tab"><label for="tab4">Memory game</label></li>
         </ul>
 
         <div class="tab-content">
@@ -37,7 +37,7 @@ Play some games to learn about Fogo 🔥
         </div>
 
         <div class="tab-content">
-            <iframe src='https://puzzel.org/fr/quiz/embed?p=-OOR_xVt00IcPCJtz2LJ' width='100%' height='800' frameborder='0'></iframe>
+            <iframe src='https://puzzel.org/en/memory/embed?p=-OPAfBhB9r8NqDQxWqYm' width='100%' height='800' frameborder='0'></iframe>
         </div>
     </div>
 </div>
