--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Play some games to learn about Fogo 🔥
             <iframe src='https://puzzel.org/en/wordseeker/embed?p=-OPAaCZSy9hcavPRNY0j' width='100%' height='800' frameborder='0'></iframe>
         </div>
         <div class="tab-content">
-            <iframe src='https://puzzel.org/en/jigsaw/embed?p=-OPAeJbBx9ZiOTSO1iwe' width='100%' height='800' frameborder='0'></iframe>
+            <iframe src='https://puzzel.org/en/slidingpuzzle/embed?p=-OPAgpyQqftfAtAiWrjN' width='100%' height='800' frameborder='0'></iframe>
         </div>
 
         <div class="tab-content">
