--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Fogo 1.1</title>
+    <title>Fogo games room</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.8.3/css/lg-comments.min.css" integrity="sha512-courhvOJfTWOExAR+cJ/XL1STCh46flmn45jrteXon4HBH0N+VzvxMCOsOUx/Wu7sWtJw8hSLp4H40W3E2H4uw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
 <!-- Swiper -->
-<h1>Meet FOGO game room</h1>
+<h1>Discover the FOGO games room</h1>
 <div class="page-content">
 Play some games to learn about Fogo 🔥
     <div class="tabbed">
