--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Play some games to learn about Fogo 🔥
             <li class="tab"><label for="tab2">Find the word</label></li>
             <li class="tab"><label for="tab3">Puzzle</label></li>
             <li class="tab"><label for="tab4">Memory game</label></li>
+            <li class="tab"><label for="tab4">Cryptogram</label></li>
         </ul>
 
         <div class="tab-content">
@@ -38,6 +39,9 @@ Play some games to learn about Fogo 🔥
 
         <div class="tab-content">
             <iframe src='https://puzzel.org/en/memory/embed?p=-OPAfBhB9r8NqDQxWqYm' width='100%' height='800' frameborder='0'></iframe>
+        </div>
+         <div class="tab-content">
+            <iframe src='https://puzzel.org/en/cryptogram/embed?p=-OPAh_uGY6dwCi0K1nku' width='100%' height='800' frameborder='0'></iframe>
         </div>
     </div>
 </div>
