--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ Play some games to learn about Fogo 🔥
         <input type="radio" id="tab2" name="css-tabs">
         <input type="radio" id="tab3" name="css-tabs">
         <input type="radio" id="tab4" name="css-tabs">
+        <input type="radio" id="tab5" name="css-tabs">
 
         <ul class="tabs">
             <li class="tab"><label for="tab1">Cross words</label></li>
             <li class="tab"><label for="tab2">Find the word</label></li>
             <li class="tab"><label for="tab3">Puzzle</label></li>
             <li class="tab"><label for="tab4">Memory game</label></li>
-            <li class="tab"><label for="tab4">Cryptogram</label></li>
+            <li class="tab"><label for="tab5">Cryptogram</label></li>
         </ul>
 
         <div class="tab-content">
