--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Play some games to learn about Fogo 🔥
 
         <ul class="tabs">
             <li class="tab"><label for="tab1">Cross words</label></li>
-            <li class="tab"><label for="tab2">Find the word</label></li>
+            <li class="tab"><label for="tab2">Fill in the gap</label></li>
             <li class="tab"><label for="tab3">Puzzle</label></li>
             <li class="tab"><label for="tab4">Memory game</label></li>
             <li class="tab"><label for="tab5">Cryptogram</label></li>
@@ -32,10 +32,10 @@ Play some games to learn about Fogo 🔥
 
         </div>
         <div class="tab-content">
-            <iframe src='https://puzzel.org/en/wordseeker/embed?p=-OPAaCZSy9hcavPRNY0j' width='100%' height='800' frameborder='0'></iframe>
+           <iframe src='https://puzzel.org/en/fill-in-the-gap/embed?p=-OPG-9YzvRs6-_zFpTTW' width='100%' height='800' frameborder='0'></iframe>
         </div>
         <div class="tab-content">
-            <iframe src='https://puzzel.org/en/slidingpuzzle/embed?p=-OPAgpyQqftfAtAiWrjN' width='100%' height='800' frameborder='0'></iframe>
+           <iframe src='https://puzzel.org/en/jigsaw/embed?p=-OPAeJbBx9ZiOTSO1iwe' width='100%' height='800' frameborder='0'></iframe>
         </div>
 
         <div class="tab-content">
