--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Play some games to learn about Fogo 🔥
             <li class="tab"><label for="tab1">Cross words</label></li>
             <li class="tab"><label for="tab2">Fill in the gap</label></li>
             <li class="tab"><label for="tab3">Puzzle</label></li>
-            <li class="tab"><label for="tab4">Memory game</label></li>
+            <li class="tab"><label for="tab4">Associate</label></li>
             <li class="tab"><label for="tab5">Cryptogram</label></li>
         </ul>
 
@@ -39,7 +39,7 @@ Play some games to learn about Fogo 🔥
         </div>
 
         <div class="tab-content">
-            <iframe src='https://puzzel.org/en/memory/embed?p=-OPAfBhB9r8NqDQxWqYm' width='100%' height='800' frameborder='0'></iframe>
+            <iframe src='https://puzzel.org/en/matching-pairs/embed?p=-OPG0qPhM5c-cxtDfY0D' width='100%' height='800' frameborder='0'></iframe>
         </div>
          <div class="tab-content">
             <iframe src='https://puzzel.org/en/cryptogram/embed?p=-OPAh_uGY6dwCi0K1nku' width='100%' height='800' frameborder='0'></iframe>
