--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="Furbo | Face of Fogo" name="description">
     <meta content="Furbo | Face of Fogo" property="og:title">
     <meta content="Furbo | Face of Fogo" property="og:description">
-    <meta content="https://cdn.prod.website-files.com/66702b538790109994372adc/66743df4dfc6400832b6c493_TOSHI%20OpenGraph%20Image.png"
+    <meta content="mascot.png"
           property="og:image">
     <meta content="Furbo | Face of Fogo" property="twitter:title">
     <meta content="Furbo | Face of Fogo" property="twitter:description">
@@ -1190,7 +1190,7 @@
                                               fill="currentColor"></path>
                                     </svg>
                                 </a></div>
-                                <div class="footer_links-wrapper"><a href="https://twitter.com/toshi_base"
+                                <div class="footer_links-wrapper"><a href="https://x.com/furbocoin"
                                                                      target="_blank" class="footer_link w-inline-block">
                                     <div>X&nbsp;(Twitter)</div>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 15 12" fill="none"
