--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<html data-wf-domain="www.toshithecat.com" data-wf-page="66702b538790109994372b19"
-      data-wf-site="66702b538790109994372adc" lang="en"
-      class="w-mod-js w-mod-ix wf-inconsolata-n4-active wf-inconsolata-n7-active wf-active"
-      data-__embeded-gyazo-content-j-s="5.13.0" data-__gyazo-expander-enabled="true">
-<script id="datalayer-checker-script"
-        src="chrome-extension://ffljdddodmkedhkcjhpmdajhjdbkogke/js/datalayer-checker.js"></script>
+<html lang="en"
+      class="w-mod-js w-mod-ix wf-inconsolata-n4-active wf-inconsolata-n7-active wf-active">
 <head>
     <style>.wf-force-outline-none[tabindex="-1"]:focus {
         outline: none;
