--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                             <div class="w-layout-grid footer_links-grid">
                                 <div class="footer_links-wrapper"><a href="https://x.com/furbocoin" target="_blank"
                                                                      class="footer_link w-inline-block">
-                                    <div>Toshi Mart</div>
+                                    <div>$FURBO</div>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 15 12" fill="none"
                                          class="footer_icon"
                                          style="opacity: 0; transform: translate3d(-0.125rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
